Fixed overflow of header on page when scrolling

--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -67,12 +67,12 @@ a {
 }
 
 .main {
-  padding-left: 16px;
-  padding-right: 16px;
+  padding-left: 24px;
+  padding-right: 24px;
 }
 #aboutcards {
   display: flex;
-  height: auto;
+  max-height: 700px;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
@@ -80,13 +80,15 @@ a {
   text-align: left; 
   margin: 0 auto;
   gap: 5%;
-  padding: 0 20px 20px;
+  padding: 75px 20px 20px 75px;
 }
 @media screen and (max-width:768px){
   #aboutcards {
     flex-direction: column;
     max-width: 350px;
-    height:auto;
+  }
+  .blurbcontainer {
+    margin-bottom: auto;
   }
 }
 
@@ -100,7 +102,7 @@ a {
 .imagecontainer {
   display: flex;
   flex: 1;
-  height: 100%;
+  max-width: auto;
   align-items: center;
 }
 
